# Learning

Books/zero2prod/: .gitignore  Dockerfile  zero2prod.http
Books/zero2prod/.cargo/: config.toml
Books/zero2prod/scripts/: init_db.sh
Books/zero2prod/src/: startup.rs  telemetry.rs
Books/zero2prod/src/domain/: new_subscriber.rs
Books/zero2prod/tests/api/: health_check.rs
zero2prod/: Cargo.toml  Dockerfile  zero2prod.http
zero2prod/configuration/: base.yaml
zero2prod/migrations/: 20230906160642_create_subscriptions_table.sql
zero2prod/src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/domain/: subscriber_email.rs  subscriber_name.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
zero2prod/tests/api/: helpers.rs  subscriptions.rs
