[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ['macros', 'rt-multi-thread', "rt"] }
serde = { version = "1.0.188", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.29", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1.10.1"
validator = "0.16.1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.20"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
wiremock = "0.5.19"
claims = "0.7.1"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "1.0.0"
